src/app/ui/dialog-fullscreen-markdown/dialog-fullscreen-markdown.component.scss
@import '../../../variables';

:host {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
}


.content {
  flex-grow: 1;
  overflow-y: scroll;
  position: relative;

  textarea {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    border: none;
    box-sizing: border-box;
    word-wrap: break-word;
    display: block;
    resize: none;
    min-height: inherit;
    overflow: auto;
    padding: $s $s*2;

    &:focus {
      outline: none;
    }
  }
}

.controls {
  flex-direction: row;
  display: flex;
  justify-content: flex-end;

  > button {
    margin: $s;
  }
}

